makes improvements on mobile design

--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Start Header -->
@@ -18,10 +18,6 @@
       </button>
       <img class="navbar-brand col-sm-3 hidden-xs-down" src="Assets/SVGs/TEN-logo.svg" />
       <img class="hidden-sm-up" src="Assets/SVGs/TEN-logo-mark.svg" />
-<!--         <div class="col-sm-4 offset-sm-4">     
-            <span class="d-inline"><img src="Assets/SVGs/account.svg" />Account</span>
-            <span class="d-inline"><img src="Assets/SVGs/contact.svg" />Contact</span>
-        </div> -->
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav header-nav top-nav">
             <li class="nav-item">
@@ -43,44 +39,45 @@
 <!-- End Header -->
 
 <!-- Start Search Bar/Nav -->
-<div class="container-fluid bg-primary text-white">
-    <div class="container">
-        <form class="form-inline pt-2 pb-2">
-          <input class="form-control col-sm-4" type="text" placeholder="Address, City, Zip, or MLS#">
-          <button class="btn col-sm-2 ml-4" type="submit">Search</button>
+<div class="container-fluid bg-faded">
+  <div class="container">
+    <nav class="navbar navbar-toggleable-md search-nav">
+      <form class="form-inline col-xs-1 col-sm-12 form-fix">
+        <input class="form-control col-sm-3" type="text" placeholder="Address, City, Zip, or MLS#">
+        <button class="btn my-2 col-sm-2 ml-4" type="submit">Search</button>
       </form>
+    </nav>
   </div>
 </div>
-
 <!-- End Search Bar/Nav -->
 
 <!-- Start Hero Section -->
 <div class="container-fluid bg-info">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-3">
-                <img class="img-fluid" src="./Assets/Realtor Image/saramortensun.jpg" />
-            </div>
-            <div class="container-fluid col-sm-4">
-                <h3>Jane Smith</h3>
-                <h4>Realtor</h4>
-                <button class="btn form-control btn-primary">Contact Me</button>
-                <div class="container-fluid">
-                    <img src="Assets/SVGs/twitter.svg" />   
-                    <img src="Assets/SVGs/facebook.svg" />
-                    <img src="Assets/SVGs/instagram.svg" />
-                    <img src="Assets/SVGs/linkedin.svg" />
-                    <img src="Assets/SVGs/youtube.svg" />
+        <div class="row fix-gutter d-flex align-items-center">
+          <div class="col-sm-3 col-lg-3">
+            <img class="img-fluid" src="./Assets/Realtor Image/saramortensun.jpg" />
+          </div>
+          <div class="container-fluid col-sm-4 col-lg-3">
+              <h1 class="mb-4">Jane Smith</h1>
+              <h4>Realtor</h4>
+              <button class="btn form-control btn-primary mt-4">Contact Me</button>
+                <div class="text-center d-flex justify-content-between mt-4">
+                  <img class="" src="Assets/SVGs/twitter.svg" />   
+                  <img class="" src="Assets/SVGs/facebook.svg" />
+                  <img class="" src="Assets/SVGs/instagram.svg" />
+                  <img class="" src="Assets/SVGs/linkedin.svg" />
+                  <img class="" src="Assets/SVGs/youtube.svg" />
                 </div>
-            </div>
-            <div class="col-sm-4"> 
-                <ul class="container-fluid">
-                    <li><img class="mr-1" src="Assets/SVGs/contact.svg" />530.802.2150</li>
-                    <li><img class="mr-1" src="Assets/SVGs/website.svg" />Visit My Website</li>
-                    <li><img class="mr-1" src="Assets/SVGs/office.svg" />Denver Office</li>
-                    <li><img class="mr-1" src="Assets/SVGs/enewsletter.svg" />eNewsletter Sign Up</li>
-                </ul>
-            </div>
+          </div>
+          <div class="col-sm-4 col-lg-3"> 
+              <ul class="container-fluid fix-gutter">
+                  <li class="ml-1"><a href="#"><img class="mr-4" src="Assets/SVGs/contact.svg" />530.802.2150</li></a>
+                  <li class="mr-3 mt-4"><a href="#"><img class="mr-2" src="Assets/SVGs/website.svg" />Visit My Website</li></a>
+                  <li class="mr-3 mt-4"><a href="#"><img class="mr-2" src="Assets/SVGs/office.svg" />Denver Office</li></a>
+                  <li class="mr-2 mt-4"><a href="#"><img class="mr-2" src="Assets/SVGs/enewsletter.svg" />eNewsletter Sign Up</li></a>
+              </ul>
+          </div>
         </div>
     </div>
 </div>
@@ -97,7 +94,7 @@
         </ul>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row tab-content">
           <div class="col-sm-9 mt-4 mb-4">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.</p>
             </div>
@@ -112,28 +109,20 @@
 </div>
 
 <!-- End Body Content -->
+
+<!-- Start Footer -->
 <div class="container-fluid bg-info">
-    <div class="container">
+    <div class="container pb-2 pt-2">
         <div class="row">
-          <div class="col">
+          <div class="col-sm-4">
             <p class="text-center-xs"><img src="Assets/SVGs/contact.svg" />1-800-234-4567</br>5678 Main Street, Denver, CO 80123</p>
-                    <ul class="nav">
-                          <li class="">
-                            <img class="icon" src="Assets/SVGs/twitter.svg" />   
-                          </li>
-                          <li class="">
-                            <img class="icon" src="Assets/SVGs/facebook.svg" />
-                          </li>
-                          <li class="nav-item">
-                            <img class="icon" src="Assets/SVGs/instagram.svg" />
-                          </li>
-                          <li class="nav-item">
-                            <img class="icon" src="Assets/SVGs/linkedin.svg" />
-                          </li>
-                          <li class="nav-item">
-                            <img class="icon" src="Assets/SVGs/youtube.svg" />
-                          </li>
-                        </ul>
+                    <div class="text-center d-flex justify-content-between">
+                      <img src="./Assets/SVGs/facebook.svg" alt="">
+                      <img src="./Assets/SVGs/linkedin.svg" alt="">
+                      <img src="./Assets/SVGs/twitter.svg" alt="">
+                      <img src="./Assets/SVGs/youtube.svg" alt="">
+                      <img src="./Assets/SVGs/instagram.svg" alt="">
+                    </div>
           </div>
           <div class="col float-right">
             <p class="text-right">
@@ -149,9 +138,7 @@
           </div>
         </div>
     </div>
-</div>
-<!-- Start Footer -->
-        
+</div>  
 <!-- End Footer -->
 
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
