starts on xs design

--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -55,14 +55,14 @@
 <div class="container-fluid bg-info">
     <div class="container">
         <div class="row fix-gutter d-flex align-items-center">
-          <div class="col-sm-3 col-lg-3">
+          <div class="col-xs-3 col-sm-3 col-lg-3">
             <img class="img-fluid" src="./Assets/Realtor Image/saramortensun.jpg" />
           </div>
           <div class="container-fluid col-sm-4 col-lg-3">
-              <h1 class="mb-4">Jane Smith</h1>
+              <h1 class="mb-md-4">Jane Smith</h1>
               <h4>Realtor</h4>
-              <button class="btn form-control btn-primary mt-4">Contact Me</button>
-                <div class="text-center d-flex justify-content-between mt-4">
+              <button class="btn form-control btn-primary mt-md-4">Contact Me</button>
+                <div class="text-center d-flex justify-content-between mt-md-4">
                   <img class="" src="Assets/SVGs/twitter.svg" />   
                   <img class="" src="Assets/SVGs/facebook.svg" />
                   <img class="" src="Assets/SVGs/instagram.svg" />
@@ -70,13 +70,11 @@
                   <img class="" src="Assets/SVGs/youtube.svg" />
                 </div>
           </div>
-          <div class="col-sm-4 col-lg-3"> 
-              <ul class="container-fluid fix-gutter">
-                  <li class="ml-1"><a href="#"><img class="mr-4" src="Assets/SVGs/contact.svg" />530.802.2150</li></a>
-                  <li class="mr-3 mt-4"><a href="#"><img class="mr-2" src="Assets/SVGs/website.svg" />Visit My Website</li></a>
-                  <li class="mr-3 mt-4"><a href="#"><img class="mr-2" src="Assets/SVGs/office.svg" />Denver Office</li></a>
-                  <li class="mr-2 mt-4"><a href="#"><img class="mr-2" src="Assets/SVGs/enewsletter.svg" />eNewsletter Sign Up</li></a>
-              </ul>
+          <div class="contact-info col-sm-4 col-lg-3">
+            <p><img src="./Assets/SVGs/contact.svg" alt=""> 530.830.2150<br></p>
+            <p><img src="./Assets/SVGs/website.svg" alt=""> Visit my website<br></p>
+            <p><img src="./Assets/SVGs/office.svg" alt=""> Denver office<br></p>
+            <p><img src="./Assets/SVGs/enewsletter.svg" alt="">  eNesletter Sign Up<br></p>
           </div>
         </div>
     </div>
