updates header icons

--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -11,13 +11,12 @@
 </head>
 <body>
   <!-- Start Header -->
-  <div class="container-fluid">
+  <div class="container-fluid mb-xs-4">
       <nav class="navbar navbar-toggleable-md navbar-light">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
       <img class="navbar-brand col-sm-3 hidden-xs-down" src="Assets/SVGs/TEN-logo.svg" />
-      <img class="hidden-sm-up" src="Assets/SVGs/TEN-logo-mark.svg" />
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav header-nav top-nav">
             <li class="nav-item">
@@ -35,6 +34,29 @@
       </ul>
   </div>
 </nav>
+<div class="icons hidden-sm-down">
+<div class="icon">
+        <img src="Assets\SVGs\contact.svg" />
+        <div class="caption">Contact</div>
+      </div>
+      <div class="icon">
+        <img src="Assets\SVGs\account.svg" />
+        <div class="caption">Account</div>
+      </div>
+</div>  
+<div class="hidden-sm-up" style="position:relative; bottom: 10px;">
+      <div class="icon" style="position:relative; bottom: 10px;">
+        <img src="Assets/SVGs/TEN-logo-mark.svg" />
+      </div>
+      <div class="icon">
+        <img src="Assets\SVGs\contact.svg" />
+        <div class="caption">Contact</div>
+      </div>
+      <div class="icon">
+        <img src="Assets\SVGs\account.svg" />
+        <div class="caption">Account</div>
+      </div>
+</div>
 </div>
   <!-- End Header -->
 
