--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -65,7 +65,7 @@
     <div class="container py-2">
       <form class="d-inline form-inline py-3">
         <input class="col-sm-4 col-lg-3 search-input" type="text" placeholder="Address, City, Zip, or MLS#">
-        <button class="btn ml-sm-2 col-sm-2 search-btn" type="submit"><span class="hidden-xs-down">Search</span><span class="hidden-sm-up"><img src="Assets/SVGs/search.svg" /></span></button>
+        <button class="btn ml-sm-2 col-sm-2 search-btn" style="background-color: #237377; color: white" type="submit"><span class="hidden-xs-down">Search</span><span class="hidden-sm-up"><img src="Assets/SVGs/search.svg" /></span></button>
       </form>
       <div class="d-inline hidden-md-down">
           <a class="col-sm-2" href="#">NEW LISTINGS</a>
